<resources>
    <string name="app_name">Drinks</string>

    <!-- Bottom Menu -->
    <string name="title_activity_bottom_menu">Bottom_Menu</string>
    <string name="title_home">Accueil</string>
    <string name="title_favorites">Favoris</string>
    <string name="title_search">Recherche</string>
    <string name="title_account">Mon compte</string>
    <string name="title_admin">Admin</string>

    <!-- Drink of the day -->
    <string name="dotd_header">Drink du jour</string>
    <string name="dotd_discover">Découvrir</string>

    <!-- PLACEHOLDER -->
    <string name="ph_drink">Martini aux fraises</string>
    <string name="popular_header">Populaires en ce moment</string>
    <string name="drink_of_week">Drinks de la semaine</string>
    <string name="drink_popular">Populaire en ce moment</string>
    <string name="title_activity_drink_details">DrinkDetails</string>
    <string name="action_settings">Settings</string>
    <string name="large_text"></string>


    <!-- Drink Details Page -->
    <string name="ingredients">Ingrédients</string>
    <string name="drink_start">Commencer</string>
    <string name="drink_next">Suivant</string>
    <string name="favorite">Favoris</string>
    <string name="discover">Rechercher</string>

    <!-- Onboarding -->
    <string name="onboarding_title_1">Bienvenue sur Drinks!</string>
    <string name="onboarding_title_2">Des cocktails créatifs et délicieux à portée de clic, pour des soirées inoubliables!</string>
    <string name="onboarding_create_account">Créer un compte</string>
    <string name="onboarding_login">Déjà inscrit? Se connecter</string>

    <!-- Login -->
    <string name="login_header01">Connexion</string>
    <string name="login_header02">Heureux de vous revoir!</string>
    <string name="login_email">Courriel</string>
    <string name="login_password">Mot de passe</string>
    <string name="login_btn">Connexion</string>
    <string name="logout_btn">Déconnexion</string>

    <!-- Register -->
    <string name="register_header01">Informations de connexion</string>
    <string name="register_header02">Apprenons à ce connaître.</string>
    <string name="register_prenom">Prénom</string>
    <string name="register_nom">Nom</string>
    <string name="register_email">Courriel</string>
    <string name="register_password">Mot de passe</string>
    <string name="register_next">Suivant</string>

    <string name="register_header03">À propos de vous</string>
    <string name="register_header04">Découvrons vos goûts</string>
    <string name="title_activity_login">Login</string>

    <!-- Account -->
    <string name="admin_btn">Admin CRUD</string>

    <!-- Admin -->
    <string name="admin_header">Admin</string>
    <string name="admin_add">Ajouter un usager</string>
    <string name="admin_list">Liste des usagers</string>
    <string name="admin_list_header">Liste des usagers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>