<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navHome"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/navSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/navFavorites"
        android:icon="@drawable/ic_heart"
        android:title="@string/title_favorites"
        app:showAsAction="always" />
    <item
        android:id="@+id/navAccount"
        android:icon="@drawable/ic_compte"
        android:title="@string/title_account"
        app:showAsAction="always" />
    <item
        android:id="@+id/navAdmin"
        android:icon="@drawable/ic_admin"
        android:title="@string/title_admin"
        app:showAsAction="always" />
</menu>