<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_heart"
        android:title="@string/title_favorites"
        app:showAsAction="always" />
    <item
        android:id="@+id/navigation_compte"
        android:icon="@drawable/ic_compte"
        android:title="@string/title_account"
        app:showAsAction="always" />

</menu>