<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="36dp"
    tools:context=".Register">

    <TextView
        android:id="@+id/register_BackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="Retour"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:max="100"
        android:maxHeight="3dp"
        android:minHeight="3dp"
        android:progress="33"
        android:progressBackgroundTint="@color/dark_grey"
        android:progressTint="@color/white" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/register_header01"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/playfair_display_bold"
        android:text="@string/login_header02"
        android:textColor="@color/white"
        android:textSize="36dp" />

    <EditText
        android:id="@+id/login_EmailTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:background="@drawable/layout_input_bg"
        android:ems="10"
        android:firstBaselineToTopHeight="0dp"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/login_email"
        android:includeFontPadding="false"
        android:inputType="textPersonName"
        android:lastBaselineToBottomHeight="0dp"
        android:lineHeight="0dp"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/light_grey"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/login_PasswordTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:background="@drawable/layout_input_bg"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/register_password"
        android:includeFontPadding="false"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/light_grey"
        android:textSize="14sp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:letterSpacing="0"
        android:text="@string/login_btn"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>