<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".home">

    <LinearLayout
        android:id="@+id/dotd_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/light_black"
        android:padding="25dp">

        <LinearLayout
            android:id="@+id/dotd_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:divider="@drawable/ver_divider_lv1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dotd_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/playfair_display_bold"
                android:text="@string/dotd_header"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/dotd_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:lineSpacingExtra="0sp"
                android:text="@string/ph_drink"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <LinearLayout
                android:id="@+id/dotd_actions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/hor_divider_lv1"
                android:maxHeight="48dip"
                android:minHeight="48dip"
                android:orientation="horizontal"
                android:showDividers="middle">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:text="@string/dotd_discover"
                    android:textColor="@color/black"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.9"
                    android:drawableLeft="@drawable/ic_heart_test"
                    android:gravity="center"
                    android:padding="6dp" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            tools:srcCompat="@tools:sample/avatars" />
    </LinearLayout>
</LinearLayout>